--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles-index.css">
+   <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
   <script src="script.js" defer></script>
   <title>Document</title>
 </head>
