--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/styles-index.css">
    <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
   <script src="script.js" defer></script>
-  <title>Document</title>
+  <title>newsletter SignUp</title>
 </head>
 <body>
   <div class="stay-updated-container">
